--- a/style.css
+++ b/style.css
@@ -31,6 +31,7 @@ button{
     width: 200px;
     height: 60px;
     bottom: 40px;
-    right: 50%;
+    left: 50%;
+    transform: translate(-50%, 0);
     background-color: rgb(70, 58, 58);
 }    
